--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.11.1",
     "react-paypal-button": "^4.1.1",
     "react-paypal-button-v2": "^2.6.2",
     "react-redux": "^7.2.2",
@@ -22,6 +23,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1",
     "v2": "0.0.3",
     "web-vitals": "^0.2.4"
   },
