--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-commerce",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "https://ekomm.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
