--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "description": "express backend",
   "main": "server.js",
   "scripts": {
-    "build": "react-scripts build",
-    "test": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,8 +14,8 @@
   "author": "abhi9-hash",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
